// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> error renders 1`] = `
<div
  class="field field--touched field--input field--text"
>
  <label
    class="field__label field__label--touched field__label--input field__label--text"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <input
    aria-describedby="form-0_mock--error"
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--touched field__input--input field__input--text"
    id="form-0_mock"
    type="text"
    value=""
  />
  <span
    class="field__error field__error--touched field__error--input field__error--text"
    id="form-0_mock--error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<Input /> help renders 1`] = `
<div
  class="field field--input field--text"
>
  <label
    class="field__label field__label--input field__label--text"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
    <span
      class="field__help field__help--input field__help--text"
    >
      Help
    </span>
  </label>
  <input
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--input field__input--text"
    id="form-0_mock"
    type="text"
    value=""
  />
</div>
`;

exports[`<Input /> label renders 1`] = `
<div
  class="field field--input field--text"
>
  <label
    class="field__label field__label--input field__label--text"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Label
  </label>
  <input
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--input field__input--text"
    id="form-0_mock"
    type="text"
    value=""
  />
</div>
`;

exports[`<Input /> renders 1`] = `
<div
  class="field field--input field--text"
>
  <label
    class="field__label field__label--input field__label--text"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <input
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--input field__input--text"
    id="form-0_mock"
    type="text"
    value=""
  />
</div>
`;
